# aiut-nao

./: CMakeLists.txt  README.md  package.xml
config/: gazebo_control_spawner_V40.yaml
launch/: gazebo_control_V40.launch
models/robocup_3Dsim_ball/: model.config  model.sdf
urdf/naoV40/: naoGazebo.xacro  nao_robot.urdf  nao_robot.xacro
world/: nao.world
